[gd_scene format=4 uid="uid://c1mmainmenu"]

[ext_resource type="Texture2D" uid="uid://bspb5wyvr4xv5" path="res://Assets/Splash/Splash.jpg" id="1_ilvnk"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="2_xk4mf"]
[ext_resource type="FontFile" uid="uid://qgc4vi5osk7v" path="res://Assets/Fonts/Star Choco.ttf" id="3_6s67a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xk4mf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ilvnk")
stretch_mode = 6

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -300.0
offset_right = 220.0
offset_bottom = -40.0
alignment = 1
theme_override_constants/separation = 18

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
unique_name_in_owner = true
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_6s67a")
theme_override_font_sizes/font_size = 36
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
unique_name_in_owner = true
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_6s67a")
theme_override_font_sizes/font_size = 36
text = "Continue"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
unique_name_in_owner = true
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_6s67a")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
unique_name_in_owner = true
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_6s67a")
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="OptionsDialog" type="AcceptDialog" parent="."]
layout_mode = 1
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
position = Vector2(640, 360)
size = Vector2(320, 120)
grow_horizontal = 2
grow_vertical = 2
title = "Options"
dialog_text = "Options are coming soon!"

